<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartDring</string>

    <string name="places_default_outdoor">Outdoor</string>

    <string name="notification_current_place">Current Place : </string>
    <string name="notification_no_profile">Inactive</string>

    <string name="fragment_title_profile">Profiles</string>
    <string name="fragment_title_auto">Auto</string>
    <string name="fragment_title_action">Action</string>

    <string name="fragment_place_selectionnone">None</string>

    <string name="fragment_profile_edition_save">Save</string>
    <string name="fragment_profile_edition_delete">Delete</string>

    <string name="fragment_place_edition_save">Save</string>
    <string name="fragment_place_edition_delete">Delete</string>
    <string name="fragment_place_edition_update">Save place from map position</string>
    <string name="fragment_place_edition_namehint">Place name</string>

    <string name="fragment_auto_switchplaces">Places</string>
    <string name="fragment_auto_switchtime">Time</string>

    <string name="fragment_auto_time">Comming soon !</string>

    <string name="fragment_action_phoneflip">Phone flip</string>

    <string name="item_profile_special_add_new">Add New</string>
    <string name="item_profile_special_plus">+</string>
    <string name="frament_action_whitelist">Contact white list</string>
    <string name="fragment_action_blacklist">Contact black list</string>
    <string name="local_service_started">service_started_id</string>
    <string name="fragment_profile_edition_alarm">Alarm</string>
    <string name="fragment_profile_edition_call">Call</string>
    <string name="fragment_profile_edition_media">Media</string>
    <string name="fragment_profile_edition_notif">Notification</string>
    <string name="fragment_profile_edition_phone">Phone</string>
    <string name="fragment_profile_edition_namehint">Profile name</string>


</resources>
