<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <EditText
        android:id="@+id/fragment_place_edition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/fragment_place_edition_namehint"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/text_gray" />

    <Button
        android:id="@+id/fragment_place_edition_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_place_edition_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_green_bg"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/fragment_place_edition_update"
        android:textColor="#FFFFFFFF" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/fragment_place_edition_mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_place_edition_bottomlayout"
        android:layout_below="@id/fragment_place_edition_update"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/fragment_place_edition_bottomlayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/fragment_place_edition_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_red_bg"
            android:text="@string/fragment_place_edition_delete"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/fragment_place_edition_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_green_bg"
            android:text="@string/fragment_place_edition_save"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

</RelativeLayout>